# anvil-nbt

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
benches/: compare.rs
src/: lib.rs
src/anvil/: access.rs  encode.rs  mod.rs
src/nbt/: encode.rs  mod.rs  mutf8.rs  parse.rs  serde_impl.rs
tests/: integration.rs  serde_tests.rs
