[package]
name = "anvil-nbt"
version = "0.1.1"
edition = "2024"
description = "A Rust library for parsing and encoding Minecraft's NBT and Anvil (.mca) formats."
license = "GPL-3.0-or-later"
authors = ["driedpampas"]
repository = "https://github.com/driedpampas/anvil-nbt"
homepage = "https://github.com/driedpampas/anvil-nbt"
readme = "README.md"
keywords = ["minecraft", "nbt", "anvil", "parser", "world"]
categories = ["parser-implementations", "game-development", "encoding"]

[dependencies]
nom = "8.0.0"
flate2 = "1.1.8"
thiserror = "2.0.17"
byteorder = "1.5.0"
memmap2 = "0.9.5"
indexmap = "2.7.0"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
