[package]
name = "anvil-nbt"
version = "0.2.0"
edition = "2024"
description = "A Rust library for parsing and encoding Minecraft's NBT and Anvil (.mca) formats."
license = "GPL-3.0-or-later"
authors = ["driedpampas"]
repository = "https://github.com/driedpampas/anvil-nbt"
homepage = "https://github.com/driedpampas/anvil-nbt"
readme = "README.md"
keywords = ["minecraft", "nbt", "anvil", "parser", "world"]
categories = ["parser-implementations", "game-development", "encoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
flate2 = "1.1.8"
thiserror = "2"
byteorder = "1.5.0"
memmap2 = "0.9"
indexmap = { version = "2.7.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8.1"
flate2 = "1.1.8"
mimalloc = "0.1.43"
# simdnbt = "0.5.0" (Requires nightly)
shen-nbt5 = "0.4.6"
# azalea-nbt = "0.8.0" (Requires nightly)
graphite_binary = "0.1.0"
valence_nbt = { version = "0.8.0", features = ["binary"] }
fastnbt = "2.5.0"
nbt = { package = "hematite-nbt", version = "0.5.2" }
crab_nbt = "0.2.11"
ussr-nbt = "0.2.1"

[[bench]]
name = "compare"
harness = false
